--- a/Satem Web/WebPage/login.html
+++ b/Satem Web/WebPage/login.html
@@ -1,7 +1,7 @@
  <!--	
-    Desarrollo De Software Vi
-    Proyecto Final - SATEN
-    Elaborado por: Aldair de Gracia, Ricardo Rubio, Víctor M. Pineda 
+    Desarrollo De Software VI
+    Proyecto Final - SATEM
+    Elaborado por: Aldair de Gracia, Ricardo Rubio, Víctor Pineda 
     Archivo:  (Login.html)
  -->
 
