--- a/Satem Web/WebPage/index.html
+++ b/Satem Web/WebPage/index.html
@@ -1,5 +1,5 @@
  <!--	
-    Desarrollo De Software Vi
+    Desarrollo De Software VI
     Proyecto Final - SATEM
     Elaborado por: Aldair de Gracia, Ricardo Rubio, Víctor Pineda 
     Archivo:  (index.html)
