--- a/Satem Web/WebPage/login.html
+++ b/Satem Web/WebPage/login.html
@@ -2,7 +2,7 @@
     Desarrollo De Software VI
     Proyecto Final - SATEM
     Elaborado por: Aldair de Gracia, Ricardo Rubio, Víctor Pineda 
-    Archivo:  (Login.html)
+    Archivo:  (login.html)
  -->
 
 <!DOCTYPE html>
