SATEM WEB - Footer Added.

--- a/Satem Web/WebPage/index.html
+++ b/Satem Web/WebPage/index.html
@@ -36,7 +36,6 @@
 		</script>
 	
 	
-    <!-- Simple header with fixed tabs. -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
@@ -54,7 +53,7 @@
         </div>
       </header>
       
-  
+
       <main class="mdl-layout__content">
         <section class="mdl-layout__tab-panel is-active" id="fixed-tab-1">
           <div class="page-content"><!-- Your content goes here -->1 </div>
@@ -73,6 +72,14 @@
         </section>
       </main>
     </div>
+
+
+     <!-- Footer --> 
+      <footer class="mdl-mini-footer"> 
+        SATEM - WEB desarrollado por &copy RIALVIC.INC. Todos los derechos reservados 2017.
+     </footer>
+
+
 	
 	
 	</body>
