Minor bugs fixed.

--- a/Satem Web/WebPage/index.html
+++ b/Satem Web/WebPage/index.html
@@ -15,19 +15,19 @@
         <link rel="stylesheet" href="CSS/materialize.min.css">
         
       <!-- Script de autenticación de firebase.  -->
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.0.0/firebase.js"></script>
     <script>
-        // Initialize Firebase
-        var config = {
-        apiKey: "AIzaSyAsd8xhLCobjaqcYXC5nuUYXdJ-PNBxGAo",
-        authDomain: "satem-b5729.firebaseapp.com",
-        databaseURL: "https://satem-b5729.firebaseio.com",
-        projectId: "satem-b5729",
-        storageBucket: "satem-b5729.appspot.com",
-        messagingSenderId: "673931608444"
-       };
-        firebase.initializeApp(config);
-    </script>
+      // Initialize Firebase
+      var config = {
+      apiKey: "AIzaSyAsd8xhLCobjaqcYXC5nuUYXdJ-PNBxGAo",
+      authDomain: "satem-b5729.firebaseapp.com",
+      databaseURL: "https://satem-b5729.firebaseio.com",
+      projectId: "satem-b5729",
+      storageBucket: "satem-b5729.appspot.com",
+      messagingSenderId: "673931608444"
+    };
+    firebase.initializeApp(config);
+  </script>
 
 		<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
@@ -88,7 +88,8 @@
                   <th>Lugar del Accidente</th>
                   <th>Paramédico</th>
                   <th>Fecha</th>
-                  <th>Emergencia</th>
+                  <th>Síntomas</th>
+                  <th>Diagnóstico</th>
                   <th>Condición Vital</th>
                   <th>Riesgo</th>
                   <th>¿Finalizar?</th>
@@ -118,6 +119,7 @@
                   <th>Condición Vital</th>
                 </tr>
             </thead>
+
           </div>
         </section>
 
@@ -147,7 +149,6 @@
                 $('#encaminoTable').DataTable();
                 } );
               </script>
-      
             <script src="getData.js"></script>
             <script src="js/libs/jquery-1.12.4.js"></script>
             <script src="js/libs/jquery.dataTables.min.js"></script>
