--- a/Satem Web/WebPage/login2.0.html
+++ b/Satem Web/WebPage/login2.0.html
@@ -65,7 +65,7 @@
       <div class="container">
         <div class="z-depth-1 grey lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
-          <form class="col s12" method="post">
+          <form class="col s12" method="post" onsubmit="login();return false;">
             <div class='row'>
               <div class='col s12'>
               </div>
@@ -102,6 +102,7 @@
 
     <div class="section"></div>
     <div class="section"></div>
+        <script src="login.js"></script>
   </main>
     <!--Sistema De Alerta Temprana De Emergencias Medicas-->
      <footer class="page-footer teal"> 
