SATEM WEB - "Improved Asignar" and "En Camino" Tables - 2

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -108,6 +108,9 @@
                   <th>Asignar</th>
                 </tr>
             </thead>
+            <tbody id="asignarTableBody">
+              
+            </tbody>
         </table>
 
     </div> <!-- tab asignar-->
@@ -131,6 +134,9 @@
                   <th>¿Finalizar?</th>
                 </tr>
             </thead>
+            <tbody id="enCaminoTableBody">
+              
+            </tbody>
         </table>
         </div> <!-- tab en camino-->
     <div id="test4" class="col s12">test4</div> <!-- tab finalizada-->
