SATEM WEB - ASIGNAR EMERGENCIA - 2

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -170,6 +170,7 @@
      </footer> 
       
 	 <!--Import jQuery before materialize.js-->
+    <script src="asignarEmergencia.js"></script>
     <script src="registrarEmergencia.js"></script>
 
     <script src="getData.js"></script>
