SATEM WEB - ASSIGN EMERGENCY IMPROVED

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -107,10 +107,9 @@
             <label for="first_name">Descripcion de la Emergencia</label>
           </div>
         </div>
-        <button type="submit" id="btnRegistrar" class="waves-effect waves-light btn">  
-         Registrar
-        </button>
-        <script src="registrarEmergencia.js"></script>
+         <button class="btn waves-effect waves-light" type="submit" name="action">Registrar Emergencia
+          <i class="material-icons right">send</i>
+         </button>
       </form>
     <!-- Fin del form para registrar emergencias.--> 
     </div>
@@ -176,6 +175,7 @@
      </footer> 
       
 	 <!--Import jQuery before materialize.js-->
+    <script src="registrarEmergencia.js"></script>
     <script src="asignarEmergencia.js"></script>
     <script src="getPaciente.js"></script>
     <script src="getData.js"></script>
