Revert "SATEM WEB - ASSIGN EMERGENCY IMPROVED"
This reverts commit ae8e8381c866939ba4f3769804702bac502801c5.

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -107,9 +107,10 @@
             <label for="first_name">Descripcion de la Emergencia</label>
           </div>
         </div>
-         <button class="btn waves-effect waves-light" type="submit" name="action">Registrar Emergencia
-          <i class="material-icons right">send</i>
-         </button>
+        <button type="submit" id="btnRegistrar" class="waves-effect waves-light btn">  
+         Registrar
+        </button>
+        <script src="registrarEmergencia.js"></script>
       </form>
     <!-- Fin del form para registrar emergencias.--> 
     </div>
@@ -175,7 +176,6 @@
      </footer> 
       
 	 <!--Import jQuery before materialize.js-->
-    <script src="registrarEmergencia.js"></script>
     <script src="asignarEmergencia.js"></script>
     <script src="getPaciente.js"></script>
     <script src="getData.js"></script>
