SATEM WEB - ASIGNAR EMERGENCIAS 5

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -61,7 +61,7 @@
        <li>
         <form id="buscarPacienteForm" method="GET">
             <div class="input-field">
-            <input id="cedulaInput" type="search" placeholder="Buscar Paciente" required>
+            <input id="cedulaInput" type="search" placeholder="Buscar" required>
             <label class="label-icon" for="search"><i class="material-icons">search</i></label>
             <i class="material-icons">close</i>
           </div>
@@ -82,7 +82,8 @@
         <li class="tab"><a href="#test2">ASIGNAR</a></li>
         <li class="tab"><a href="#test3">EN CAMINO</a></li>
         <li class="tab"><a href="#test4">FINALIZADA</a></li>
-        <li class="tab"><a href="#test5">ESTADISTICAS</a></li>
+        <li class="tab"><a href="#test5">PACIENTES</a></li>
+        <li class="tab"><a href="#test6">ESTADISTICAS</a></li>
       </ul>
     </div>
   </nav>
@@ -146,16 +147,10 @@
               <thead>
                 <tr>
                   <th># de Emergencia</th>
-                  <th>Nombre</th>
-                  <th>Cédula</th>
                   <th># de Ambulancia</th>
                   <th>Lugar del Accidente</th>
-                  <th>Paramédico</th>
                   <th>Fecha</th>
-                  <th>Emergencia</th>
-                  <th>Diagnóstico</th>
-                  <th>Condición Vital</th>
-                  <th>Riesgo</th>
+                  <th>Suceso</th>
                   <th>¿Finalizar?</th>
                 </tr>
             </thead>
@@ -165,7 +160,8 @@
         </table>
         </div> <!-- tab en camino-->
     <div id="test4" class="col s12">test4</div> <!-- tab finalizada-->
-    <div id="test5" class="col s12">test5</div> <!-- tab estadisticas-->
+    <div id="test5" class="col s12">test5</div> <!-- tab pacientes-->
+    <div id="test6" class="col s12">test6</div> <!-- tab estadisticas-->
       
     
 </main>
