testing vs code commits

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -292,6 +292,7 @@ window.myPie = new Chart(ctx4).Line(lineChartData, {responsive:true});
      </footer> 
       
 	 <!--Import jQuery before materialize.js-->
+   <!--Imports de los JS necesarios para correr el site-->
     <script src="getData.js"></script>
     <script src="registrarEmergencia.js"></script>
     <script src="asignarEmergencia.js"></script>
