--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -161,7 +161,7 @@
     </div> <!-- tab en camino-->
     <div id="test4" class="col s12">test4</div> <!-- tab finalizada-->
     <div id="test5" class="col s12">
-
+    test5
    </div> 
 
     <!-- tab pacientes-->
