--- a/Satem Web/WebPage/estadisticas.html
+++ b/Satem Web/WebPage/estadisticas.html
@@ -42,7 +42,8 @@
 </header>
 <script src="Chart.js"></script>
 <div id="canvas-holder">
-<canvas id="chart-area" width="300" height="300"></canvas>
+<div align="center"><h4>hola mundo</h4></div>
+<canvas id="chart-area" width="300" height="200"><h4>hola mundo</h4></canvas>
 <canvas id="chart-area2" width="300" height="300"></canvas>
 <canvas id="chart-area3" width="600" height="300"></canvas>
 <canvas id="chart-area4" width="600" height="300"></canvas>
