SATEM WEB - FINALIZE EMERGENCY 2

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -304,6 +304,7 @@ window.myPie = new Chart(ctx4).Line(lineChartData, {responsive:true});
     <script src="asignarEmergencia.js"></script> 
     <script src="getPaciente.js"></script> 
     <script src="logout.js"></script> 
+    <script src="finalizarEmergencia.js"></script> 
  
   </body> 
           
