--- a/Satem Web/WebPage/passReset.html
+++ b/Satem Web/WebPage/passReset.html
@@ -49,8 +49,10 @@
       messagingSenderId: "673931608444"
     };
     firebase.initializeApp(config);
+    
   </script>
 
+  
 
 
 </head>
@@ -65,7 +67,7 @@
   </header>
 
   <main>
-
+    <!-- box del formulario -->
     <div class="section"></div>
 
     <h5 class="indigo-text">Por Favor, Ingrese su Correo electronico</h5>
