SATEM WEB - CHARTS ADDED

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -209,7 +209,7 @@
    </div>  
  
     <!-- tab pacientes--> 
-    <div id="test6" class="col s12">test6  
+    <div id="test6" class="col s12">
 <script src="Chart.js"></script>
 <div id="canvas-holder">
 <canvas id="chart-area3" width="1200" height="300"></canvas>
