SATEM WEB - IMPROVING CODE 1
- Added onChildRemoved for assign ambulance.

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -135,6 +135,7 @@
         <h5>Seleccione las emergencias que atenderán la ambulancia</h5> 
  
         <select multiple id="selectAmbulancias" class="browser-default" style="border: 1px solid;"> 
+            <option value="" disabled selected>Ambulancias</option> 
         </select> <br> 
  
  
