SATEM WEB - IMPROVING CODE 3

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -211,7 +211,7 @@
  
     <!-- tab pacientes--> 
     <div id="test6" class="col s12">
-<script src="Chart.js"></script>
+<script src="js/Chart.js"></script>
 <div id="canvas-holder">
 <canvas id="chart-area3" width="1200" height="300"></canvas>
 
