Auto stash before merge of "master" and "origin/master"
insignificant stuff that should make no damage. i promise

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -76,8 +76,8 @@
     </div> 
            
         <ul class="side-nav" id="mobile-demo"> 
-            <li><a href="collapsible.html">busqueda</a></li> 
-            <li><a href="collapsible.html">Cerrar Sesion</a></li> 
+            <li><a >busqueda</a></li> 
+            <li><a >Cerrar Sesion</a></li> 
         </ul> 
     </div> 
     <div class="nav-content"> 
