cambios de color -  en progreso

--- a/Satem Web/WebPage/login2.0.html
+++ b/Satem Web/WebPage/login2.0.html
@@ -50,7 +50,7 @@
   <header>
 
     <nav>
-      <div class="nav-wrapper teal">
+      <div class="nav-wrapper cyan">
         <a href="#" class="brand-logo">SATEM</a>
       </div>
     </nav>
@@ -62,7 +62,7 @@
     <center>
       <div class="section"></div>
 
-      <h5 class="indigo-text">Por Favor, Ingrese en su cuenta</h5>
+      <h5 class="cyan-text">Por Favor, Ingrese en su cuenta</h5>
       <div class="section"></div>
 
       <div class="container">
@@ -107,8 +107,9 @@
     <div class="section"></div>
     <script src="login.js"></script>
   </main>
-  <!--Sistema De Alerta Temprana De Emergencias Medicas-->
-  <footer class="page-footer teal">
+
+  <!--Footer -->
+  <footer class="page-footer cyan">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
