--- a/Satem Web/WebPage/passReset.html
+++ b/Satem Web/WebPage/passReset.html
@@ -60,7 +60,7 @@
 <body>
   <header>
     <nav>
-      <div class="nav-wrapper teal">
+      <div class="nav-wrapper cyan">
         <a href="#" class="brand-logo">SATEM</a>
       </div>
     </nav>
@@ -70,7 +70,7 @@
     <!-- box del formulario -->
     <div class="section"></div>
 
-    <h5 class="indigo-text">Por Favor, Ingrese su Correo electronico</h5>
+    <h5 class="cyan-text">Por Favor, Ingrese su Correo electronico</h5>
     <div class="section"></div>
 
     <div class="container">
@@ -99,7 +99,7 @@
   </main>
 
   <!-- Footer-->
-  <footer class="page-footer teal">
+  <footer class="page-footer cyan">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
