accent color web

--- a/Satem Web/WebPage/passReset.html
+++ b/Satem Web/WebPage/passReset.html
@@ -86,7 +86,7 @@
             </div>
           </div>
             <div class='row'>
-              <button type="submit" name="btn_Enviar" class="col s12 btn btn-large waves-effect indigo">Enviar</button>
+              <button type="submit" name="btn_Enviar" class="col s12 btn btn-large waves-effect orange">Enviar</button>
             </div>
         </form>
       </div>
