solo se me quedo algo insignificante

--- a/Satem Web - Doctor Version/index.html
+++ b/Satem Web - Doctor Version/index.html
@@ -47,7 +47,7 @@
         <header>
           
           <nav>
-            <div class="nav-wrapper teal">
+            <div class="nav-wrapper cyan">
               <a href="#" class="brand-logo">SATEM - LISTA DE PACIENTES</a>
                <div class="nav-wrapper"> 
                 <ul class="right hide-on-med-and-down"> 
@@ -93,7 +93,7 @@
       
     </main>
 
-     <footer class="page-footer teal">  
+     <footer class="page-footer cyan">  
         <div class="container"> 
             <div class="row"> 
               <div class="col l6 s12"> 
