--- a/Satem Web - Doctor Version/login.html
+++ b/Satem Web - Doctor Version/login.html
@@ -50,7 +50,7 @@
   <header>
 
     <nav>
-      <div class="nav-wrapper teal">
+      <div class="nav-wrapper cyan">
         <a href="#" class="brand-logo">SATEM</a>
       </div>
       
@@ -63,7 +63,7 @@
     <center>
       <div class="section"></div>
 
-      <h5 class="indigo-text">Por Favor, Ingrese en su cuenta</h5>
+      <h5 class="cyan-text">Por Favor, Ingrese en su cuenta</h5>
       <div class="section"></div>
 
       <div class="container">
@@ -95,7 +95,7 @@
             <br />
             <center>
               <div class='row'>
-                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect indigo'>Login</button>
+                <button type='submit' name='btn_login' class='col s12 btn btn-large waves-effect orange'>Login</button>
               </div>
             </center>
           </form>
@@ -109,7 +109,7 @@
     <script src="login.js"></script>
   </main>
   <!--Sistema De Alerta Temprana De Emergencias Medicas-->
-  <footer class="page-footer teal">
+  <footer class="page-footer cyan">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
