--- a/Satem Web - Doctor Version/passReset.html
+++ b/Satem Web - Doctor Version/passReset.html
@@ -60,7 +60,7 @@
 <body>
   <header>
     <nav>
-      <div class="nav-wrapper teal">
+      <div class="nav-wrapper cyan">
         <a href="#" class="brand-logo">SATEM</a>
       </div>
     </nav>
@@ -86,7 +86,7 @@
             </div>
           </div>
             <div class='row'>
-              <button type="submit" name="btn_Enviar" class="col s12 btn btn-large waves-effect indigo">Enviar</button>
+              <button type="submit" name="btn_Enviar" class="col s12 btn btn-large waves-effect orange">Enviar</button>
             </div>
         </form>
       </div>
@@ -99,7 +99,7 @@
   </main>
 
   <!-- Footer-->
-  <footer class="page-footer teal">
+  <footer class="page-footer cyan">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
