--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -28,6 +28,7 @@
     <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" href="CSS/materialize.min.css"> 
+    <link rel="stylesheet" href="CSS/placeholder.css">
     <title>SATEM</title> 
     <script src="js/jquery-3.2.1.min.js" type="text/javascript" ></script> 
     <script src="js/jquery.dataTables.js" type="text/javascript"></script>
@@ -68,8 +69,8 @@
       <ul> 
        <li> 
             <div class="input-field"> 
-              <input id="cedulaInput" type="search" aria-controls="finalizadaTable" placeholder="Buscar"> 
-              <label class="label-icon" for="search"><i class="material-icons">search</i></label> 
+              <input id="cedulaInput" type="search" aria-controls="finalizadaTable" placeholder="Buscar" > 
+              <label class="label-icon cyan-darken" for="search"><i class="material-icons">search</i></label> 
               <i class="material-icons">close</i> 
           </div> 
        </li> 
@@ -115,7 +116,7 @@
             <label for="first_name">Descripcion de la Emergencia</label> 
           </div> 
         </div> 
-         <button class="btn waves-effect waves-light" type="submit" name="action">Registrar Emergencia 
+         <button class="btn waves-effect waves-light orange" type="submit" name="action">Registrar Emergencia 
           <i class="material-icons right">send</i> 
          </button> 
       </form> 
@@ -141,7 +142,7 @@
         </select> <br> 
  
  
-        <button class="btn waves-effect waves-light" type="submit" name="action">Asignar Emergencia 
+        <button class="btn waves-effect waves-light orange" type="submit" name="action">Asignar Emergencia 
           <i class="material-icons right">send</i> 
          </button> 
       </form> 
