--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -25,7 +25,7 @@
      
     <meta charset=utf-8> 
     <!-- Comprobamos el estado del login del usuario.  --> 
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1"> 
     <link rel="stylesheet" href="CSS/materialize.min.css"> 
     <link rel="stylesheet" href="CSS/placeholder.css">
