center del pass reset

--- a/Satem Web - Doctor Version/passReset.html
+++ b/Satem Web - Doctor Version/passReset.html
@@ -68,6 +68,7 @@
 
   <main>
     <!-- box del formulario -->
+    <center>
     <div class="section"></div>
 
     <h5 class="indigo-text">Por Favor, Ingrese su Correo electronico</h5>
@@ -89,9 +90,11 @@
               <button type="submit" name="btn_Enviar" class="col s12 btn btn-large waves-effect orange">Enviar</button>
             </div>
         </form>
+        </form>
       </div>
     </div>
-    </div>
+  
+    
 
 
     <!-- firebase password reset script-->
