--- a/Satem Web/WebPage/passReset.html
+++ b/Satem Web/WebPage/passReset.html
@@ -68,6 +68,7 @@
 
   <main>
     <!-- box del formulario -->
+    <center>
     <div class="section"></div>
 
     <h5 class="cyan-text">Por Favor, Ingrese su Correo electronico</h5>
@@ -88,6 +89,7 @@
             <div class='row'>
               <button type="submit" name="btn_Enviar" class="col s12 btn btn-large waves-effect orange">Enviar</button>
             </div>
+            <center>
         </form>
       </div>
     </div>
