SATEM WEB - USABILITY IMPROVEMENTS 1

--- a/Satem Web - Doctor Version/login.html
+++ b/Satem Web - Doctor Version/login.html
@@ -63,7 +63,7 @@
     <center>
       <div class="section"></div>
 
-      <h5 class="cyan-text">Por Favor, Ingrese en su cuenta</h5>
+      <h5 class="cyan-text">Por Favor, Ingrese su cuenta</h5>
       <div class="section"></div>
 
       <div class="container">
