SATEM WEB - CHART BUG FIXED (KINDA)

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -214,12 +214,12 @@
  
     <!-- tab pacientes--> 
     <div id="test6" class="col s12">
-<script src="js/Chart.js"></script>
+<script src="js/Chart.min.js"></script>
 <div id="canvas-holder">
-<canvas id="chart-area3" width="1200" height="300"></canvas>
+<canvas id="chart-ambulancias" width="1200" height="300"></canvas>
 
 </div>
-<script src="java.js"></script>
+<script src="analytics.js"></script>
 </main> 
             <!-- Footer -->  
  
