SATEM APP & WEB - USABILITY IMPROVEMENTS

--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -112,7 +112,7 @@
         </div> 
         <div class="row"> 
           <div class="input-field col s6"> 
-            <input placeholder="Descripción" id="descripcion_emergencia" type="text" class="validate"> 
+            <textarea id="descripcion_emergencia" class="materialize-textarea validate"></textarea> 
             <label for="first_name">Descripcion de la Emergencia</label> 
           </div> 
         </div> 
