--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -216,7 +216,11 @@
     <div id="test6" class="col s12">
 <script src="js/Chart.min.js"></script>
 <div id="canvas-holder">
-<canvas id="chart-ambulancias" width="1200" height="300"></canvas>
+<canvas id="chart-ambulancias" width="700" height="300"></canvas>
+
+</div>
+<div>
+<canvas id="chart-paramedicos" width="700" height="300"></canvas>
 
 </div>
 <script src="analytics.js"></script>
