--- a/Satem Web/WebPage/index2.0.html
+++ b/Satem Web/WebPage/index2.0.html
@@ -215,6 +215,13 @@
     <!-- tab pacientes--> 
     <div id="test6" class="col s12">
 <script src="js/Chart.min.js"></script>
+
+<div>
+<canvas id="chart-emergency" width="700" height="300"></canvas>
+
+</div>
+
+
 <div id="canvas-holder">
 <canvas id="chart-ambulancias" width="700" height="300"></canvas>
 
